--- a/_posts/2018-10-26-tea_talk.md
+++ b/_posts/2018-10-26-tea_talk.md
@@ -15,3 +15,6 @@
 1, elasticsearch数据录入时，先进入内存，然后大约1s(可配置)后会落盘，如果在第999ms时这个节点崩溃，过去999ms的数据就会丢失。
 但是，es的index可以保证是实时的，因为Get请求会直接读取内存中尚未Flush到磁盘的TransLog。
 [详细资料](https://zhuanlan.zhihu.com/p/34669354)
+
+
+cdn有一个特性，url没有改变下载的资源就不变。
